# dataframe-faker

./: Makefile  README.md  example.py  pyproject.toml
.github/workflows/: publish.yaml  tests.yaml
examples/: datasource-batch.py  datasource-stream.py
src/dataframe_faker/: __init__.py  constraints.py  dataframe.py  datasource.py
tests/: conftest.py  helpers.py  test_dataframe.py  test_datasource.py
