[project]
name = "dataframe-faker"
version = "0.1.0"
description = "Simple helper for generating fake data that matches a PySpark DataFrame schema with Faker."
readme = "README.md"
authors = [
    { name = "Ville Puuska", email = "puuskaville@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "faker>=36.1.1",
    "pyspark>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[tool.ruff.lint]
extend-select = ["I"]
