[project]
name = "dataframe-faker"
version = "0.1.4"
description = "A simple helper for generating DataFrames filled with fake data with the help of Faker."
readme = "README.md"
authors = [{ name = "Ville Puuska", email = "puuskaville@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["faker>=36.1.1", "python-dateutil>=2.9.0.post0"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
pyspark = ["pyspark>=3.5.0"]
datasource = ["pyspark>=4.0.0", "pyarrow>=20.0.0"]

[project.urls]
Repository = "https://github.com/VillePuuska/dataframe-faker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "pyspark>=4.0.0",
    "pyarrow>=20.0.0",
    "coverage>=7.6.12",
    "pyrefly>=0.16.2",
    "pyarrow-stubs>=19.4",
    "types-python-dateutil>=2.9.0.20250516",
]
dbr154 = [
    "coverage>=7.9.1",
    "pyspark==3.5.0",
    "pytest>=8.4.0",
]
dbr164 = [
    "coverage>=7.9.1",
    "pyspark==3.5.2",
    "pytest>=8.4.0",
]

[tool.uv]
conflicts = [
    [
        { group = "dev" },
        { group = "dbr154" },
    ],
    [
        { extra = "datasource" },
        { group = "dbr154" },
    ],
    [
        { group = "dev" },
        { group = "dbr164" },
    ],
    [
        { extra = "datasource" },
        { group = "dbr164" },
    ],
    [
        { group = "dbr154" },
        { group = "dbr164" },
    ],
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyrefly]
project_includes = ["src"]
